# jmsr

./: .browserslistrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CONTEXT.md  LICENSE  README.md  biome.json  cliff.toml  lint-staged.config.mjs  material-theme.json  package.json  panda.config.ts  rsbuild.config.ts  rstest.config.ts  rstest.setup.ts  skills-lock.json  tsconfig.json
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/media-server-api/emby/: Cargo.toml  README.md
src-tauri/media-server-api/emby/.openapi-generator/: FILES
src-tauri/media-server-api/emby/src/apis/: activity_log_service_api.rs  artists_service_api.rs  audio_service_api.rs  backup_api_api.rs  bif_service_api.rs  branding_service_api.rs  channel_service_api.rs  codec_parameter_service_api.rs  collection_service_api.rs  configuration.rs  configuration_service_api.rs  connect_service_api.rs  content_service_api.rs  device_service_api.rs  display_preferences_service_api.rs  dlna_server_service_api.rs  dlna_service_api.rs  dynamic_hls_service_api.rs  encoding_info_service_api.rs  environment_service_api.rs  feature_service_api.rs  ffmpeg_options_service_api.rs  game_genres_service_api.rs  generic_ui_api_service_api.rs  genres_service_api.rs  hls_segment_service_api.rs  image_service_api.rs  instant_mix_service_api.rs  item_lookup_service_api.rs  item_refresh_service_api.rs  item_update_service_api.rs  items_service_api.rs  library_service_api.rs  library_structure_service_api.rs  live_stream_service_api.rs  live_tv_service_api.rs  localization_service_api.rs  media_info_service_api.rs  mod.rs  movies_service_api.rs  (+32 more)
src-tauri/media-server-api/emby/src/models/: access_schedule.rs  actions_postback_action.rs  activity_log_entry.rs  album_info.rs  all_theme_media_result.rs  api_add_admin_notification.rs  api_available_recording_options.rs  api_base_items_request.rs  api_configuration_page_info.rs  api_epg_row.rs  api_listing_provider_type_info.rs  api_name_id_description_pair.rs  api_on_playback_progress.rs  api_set_channel_disabled.rs  api_set_channel_mapping.rs  api_set_channel_sort_index.rs  api_tag_item.rs  artist_info.rs  attributes_simple_condition.rs  attributes_value_condition.rs  authenticate_user.rs  authenticate_user_by_name.rs  authentication_authentication_result.rs  base_item_dto.rs  base_item_person.rs  base_refresh_request.rs  bit_rate.rs  book_info.rs  branding_branding_options.rs  channel_management_info.rs  chapter_info.rs  client_capabilities.rs  codec_configuration.rs  codec_directions.rs  codec_kinds.rs  codec_profile.rs  codec_type.rs  collections_collection_creation_result.rs  color_formats.rs  common_editor_types.rs  (+293 more)
src-tauri/media-server-api/jellyfin/: Cargo.toml  README.md
src-tauri/media-server-api/jellyfin/.openapi-generator/: FILES
src-tauri/media-server-api/jellyfin/src/apis/: activity_log_api.rs  api_key_api.rs  artists_api.rs  audio_api.rs  backup_api.rs  branding_api.rs  channels_api.rs  client_log_api.rs  collection_api.rs  configuration.rs  configuration_api.rs  dashboard_api.rs  devices_api.rs  display_preferences_api.rs  dynamic_hls_api.rs  environment_api.rs  filter_api.rs  genres_api.rs  hls_segment_api.rs  image_api.rs  instant_mix_api.rs  item_lookup_api.rs  item_refresh_api.rs  item_update_api.rs  items_api.rs  library_api.rs  library_structure_api.rs  live_tv_api.rs  localization_api.rs  lyrics_api.rs  media_info_api.rs  media_segments_api.rs  mod.rs  movies_api.rs  music_genres_api.rs  package_api.rs  persons_api.rs  playlists_api.rs  playstate_api.rs  plugins_api.rs  (+23 more)
src-tauri/media-server-api/jellyfin/src/models/: access_schedule.rs  activity_log_entry.rs  activity_log_entry_message.rs  activity_log_entry_query_result.rs  activity_log_entry_start_message.rs  add_virtual_folder_dto.rs  (+353 more)
src-tauri/src/: command.rs  config.rs  image_cache.rs  image_ref.rs  lib.rs  playback_control.rs  tray.rs
src-tauri/src/jellyfin/: client.rs  client_facade.rs  error.rs  intro_skipper.rs  mod.rs  mpv_event.rs  play_resolution.rs  session.rs  types.rs  websocket.rs
src-tauri/src/mpv/: client.rs  ipc.rs  mod.rs  process.rs  protocol.rs
(+113 files in other folders)
