[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
parking_lot = "0.12.5"
async-channel = "2.5.0"
which = "8.0.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
tauri-plugin-store = "2.4.1"
dirs = "6.0.0"
tokio-util = "0.7.17"
