[package]
name = "jmsr"
version = "1.4.1"
description = "Jellyfin MPV Shim Rust - A cast receiver for Jellyfin that controls external MPV"
authors = ["Hewel"]
license = "MIT"
repository = "https://github.com/hewel/jmsr"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jmsr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2.8.0"
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
parking_lot = "0.12.5"
async-channel = "2.5.0"
which = "8.0.2"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
futures-util = "0.3.32"
tauri-plugin-store = "2.4.3"
dirs = "6.0.0"
tokio-util = "0.7.18"
reqwest = { version = "0.13.3", features = ["json", "query", "rustls"] }
jellyfin_api = { version = "10.11.10", path = "jellyfin-api", features = ["rustls"] }
