[package]
name = "jellypilot"
version = "1.4.1"
description = "JellyPilot - A cast receiver for Jellyfin that controls external MPV"
authors = ["Hewel"]
license = "MIT"
repository = "https://github.com/hewel/jellypilot"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jellypilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
sha2 = "0.10.9"
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2.8.0"
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
parking_lot = "0.12.5"
async-channel = "2.5.0"
which = "8.0.2"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
futures-util = "0.3.32"
tauri-plugin-store = "2.4.3"
dirs = "6.0.0"
tokio-util = "0.7.18"
reqwest = { version = "0.13.3", features = ["json", "query", "rustls"] }
jellyfin_api = { version = "10.11.10", path = "media-server-api/jellyfin", features = ["rustls"] }
emby_api = { version = "4.9.3", path = "media-server-api/emby", features = ["rustls"] }
